# actually_beep

./: .gitignore  Cargo.toml  README.md
examples/: just_beep.rs
src/: beep.rs  error.rs  lib.rs
